	  double clicks the mouse or presses the enter or return key. This is so you can select charts
	  to modify them without having to load them first.
	  
20050213: Fixed bug with stacked indicator not drawing after being turned on/off.

20050213: Fixed bug that segfaults if a turned off indicator is modified.

20050214: Fixed bug #1122245 - issues with CSV plugin.

	  	  
	  
0.29
====

20041009: Fixed bug #1043055 - app font should default to system font.

20041009: Fixed bug #1043044 - font names with spaces don't persist.

20041009: Fixed bug #1043037 - help path configuration.

20041021: New indicator plugin SYMBOL. This allows user to overlay a plot of the close
          of any symbol (ticker) onto any indicator.
	  
20041021: Removed the OVRLY indicator. Now redundant due to the SYMBOL plugin and
          CUS language functions.
	  
20041025: Fixed bug in MATH::MIN/MAX that didn't include the current bar in the calculation.
          Current bar is now included.
	  
20041030: Enabled chart context menu to allow creation and editing of indicators without the
          need for a chart to be loaded.
	  
20041030: Fixed bug in COMP plugin that didn't check for displace value greater than the
          timeLoop value. Was causing segfaults.
	  	  	 
20041101: Fixed logic error introduced from previous fix in the COMP plugin that removed
          all true signals from being generated.
	  
20041101: Added levels to the default settings for the Fibo plugin.

20041101: Fixed Auto History and retry functions for the Yahoo plugin.

20041101: Fixed cancel download function for the yahoo plugin. 

20041101: Fixed bug in Fibo plugin that ignored levels that extend beyond the original
          high and low points. The user can now select a fibo object by selecting any line
	  rather than just the high and low ones. The grab handles will still only appear
	  on the original high and low levels.
	  
20041102: Changed quotes dialog back to non-modal.
