@@ -202,6 +202,11 @@ void QtstalkerApp::initMenuBar()
   menubar = new MainMenubar(this);
   connect(menubar, SIGNAL(signalExit()), qApp, SLOT(quit()));
   connect(this, SIGNAL(signalSetKeyFlag(bool)), menubar, SLOT(setKeyFlag(bool)));
+  connect(menubar, SIGNAL(signalRunMacro(QString)), this, SLOT(slotRunMacro(QString)));
+  connect(menubar, SIGNAL(signalSidePanel(bool)), this, SLOT(slotHideNav(bool)));
+  connect(menubar, SIGNAL(signalNewIndicator()), this, SLOT(slotNewIndicator()));
+  connect(menubar, SIGNAL(signalOptions()), this, SLOT(slotOptions()));
+  connect(menubar, SIGNAL(signalQuotes()), this, SLOT(slotQuotes()));
 }
 
 void QtstalkerApp::initToolBar()
@@ -1293,6 +1298,9 @@ void QtstalkerApp::slotRunMacro (QString d)
 	break;
       case Macro::ChartToolbar:
 //        toolbar2->doKeyPress(m->getKey());
+	break;
+      case Macro::Menubar:
+        menubar->doKeyPress(m->getKey());
 	break;
       default:
         break;
